@@ -1,5 +1,8 @@
 Current Version: @@VERSION@@
 
+ctags-5.1.1 (Sat Nov 10 2001)
+* Portabilitiy fixes [VMS, OS/2]
+
 ctags-5.1 (Tue Nov 06 2001)
 * Changed name of option configuration files for MSDOS, MSWindows, and OS/2.
 * Changed regex support to enforce REG_NEWLINE. This fixes problem where the
